# ros2-study

./: .gitignore  TODO copy.md  TODO.md
graduation-prj/: MUJOCO_LOG.TXT  NOTICE.md  RULE.md  TODO.md  pyproject.toml
graduation-prj/car_rl/: PROJECT_SUMMARY.md  car.xml  car_env.py  first.ipynb  main.py  test.py  train.py
graduation-prj/car_rl/report/: 00_README.md  01_execution_flow.md  02_car_env_mujoco_gymnasium.md  03_viewer_loop_and_time.md  04_reward_and_task_design.md  05_ppo_core.md  06_training_testing_models.md  07_faq_debugging.md
graduation-prj/docs/help/: 01_mujoco_scene_setup_help.md  02_ee_viewer_demo_help.md  03_ball_bounce_and_ee_delta_env_help.md  04_reward_logging_and_rollout_analysis_help.md  05_ppo_logging_bridge_help.md  06_robot_table_tennis_project_direction_help.md  07_upward_bounce_rl_end_to_end_help.md
graduation-prj/docs/report/: 01_mujoco_scene_setup_report.md  02_ee_viewer_demo_report.md  03_ball_bounce_and_ee_delta_env_report.md  04_reward_logging_and_rollout_analysis_report.md  05_preppo_distribution_and_ppo_logging_report.md  06_competitive_robot_table_tennis_paper_report.md  07_takeaways_from_competitive_table_tennis_for_bounce_rl.md
graduation-prj/docs/step/: 01_project_pipeline_unified.md  02_ee_task_space_next_steps.md  03_ee_delta_env_contract.md
graduation-prj/pingpong_rl/assets/: scene.xml
graduation-prj/pingpong_rl/scripts/: run_bounce_baseline.py  run_ee_rollout_analysis.py  run_ppo_baseline.py  (+2 more)
graduation-prj/summerize-init/: claude-proposal.md  claude-proposal2.md  gemini-proposa.md  gemini-proposal2.md
(+49 files in other folders)
