[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graduation-pingpong-rl"
version = "0.1.0"
description = "MuJoCo ping-pong robot simulation environment"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.0",
  "numpy>=1.24",
]

[project.scripts]
pingpong-rl-viewer = "pingpong_rl.viewer:main"

[tool.setuptools]
package-dir = {"" = "pingpong_rl/src"}

[tool.setuptools.packages.find]
where = ["pingpong_rl/src"]